# dynamo

./: .coderabbit.yaml  .dockerignore  .gitignore  .pre-commit-config.yaml  CODEOWNERS  Cargo.toml  README.md  pyproject.toml
.github/: filters.yaml
.github/workflows/: build-flavor-matrix.yml  build-flavor.yml  build-frontend-image.yaml  build-on-demand.yml  build-test-distribute-flavor-matrix.yml  build-test-distribute-flavor.yml  container-validation-dynamo.yml  docs-link-check.yml  fern-docs.yml  nightly-ci.yml  post-merge-ci.yml  pr.yaml  pre-merge.yml  release.yml  shared-deploy-test-framework.yml  trigger_ci.yml
benchmarks/: pyproject.toml
benchmarks/router/: README.md
container/: Dockerfile.template  Dockerfile.test  Dockerfile.trtllm  Dockerfile.vllm  README.md  build.sh  context.yaml  render.py
container/compliance/: Dockerfile.extract  README.md  resolve_base_image.py
container/templates/: args.Dockerfile  dev.Dockerfile  dynamo_runtime.Dockerfile  local_dev.Dockerfile  sglang_runtime.Dockerfile  trtllm_framework.Dockerfile  trtllm_runtime.Dockerfile  vllm_framework.Dockerfile  vllm_runtime.Dockerfile  wheel_builder.Dockerfile
deploy/: docker-observability.yml  sanity_check.py
deploy/observability/: tempo-datasource.yml
deploy/operator/: Dockerfile  Makefile  Tiltfile  go.mod  go.sum
deploy/snapshot/: Dockerfile  Makefile  go.mod  go.sum
docs/: index.yml
docs/benchmarks/: kv-router-ab-testing.md  mocker-trace-replay.md
docs/design-docs/: planner-design.md
docs/development/: backend-guide.md
docs/fault-tolerance/: README.md
docs/features/: agentic_workloads.md
docs/getting-started/: local-installation.md  quickstart.md
docs/integrations/: flexkv-integration.md  lmcache-integration.md
docs/kubernetes/: README.md  api-reference.md  dgdr.md  dynamo-operator.md  inference-gateway.md  installation-guide.md  snapshot.md  tilt-dev-setup.md  topology-aware-scheduling.md  webhooks.md
docs/mocker/: mocker.md
docs/observability/: metrics.md
docs/performance/: tuning.md
docs/reference/: feature-matrix.md  release-artifacts.md  support-matrix.md
examples/: README.md
examples/common/: gpu_utils.md  gpu_utils.sh  launch_utils.sh
examples/diffusers/: worker.py
examples/global_planner/: global-planner-gpu-budget.yaml  global-planner-mocker-test.yaml  global-planner-vllm-test.yaml
fern/: docs.yml  fern.config.json
fern/versions/: dev.yml
lib/kv-router/: Cargo.toml
lib/kv-router/src/: event_sink.rs  lib.rs  protocols.rs  test_utils.rs  zmq_wire.rs
lib/kv-router/src/indexer/: README.md  concurrent_radix_tree.rs  concurrent_radix_tree_compressed.rs  kv_indexer.rs  local.rs  metrics.rs  mod.rs  positional.rs  pruning.rs  radix_tree.rs  sharded.rs  tests.rs  thread_pool.rs  traits.rs  types.rs
lib/kv-router/src/scheduling/: config.rs  local.rs  mod.rs  policy.rs  queue.rs  selector.rs  types.rs
lib/kv-router/src/sequences/: multi_worker.rs  single.rs
lib/kv-router/src/standalone_indexer/: indexer.rs  listener.rs  mod.rs  registry.rs  server.rs
lib/kv-router/src/standalone_indexer/runtime/: discovery.rs  query_engine.rs  subscriber.rs
lib/kvbm-logical/: Cargo.toml
lib/kvbm-logical/src/testing/: managers.rs  mod.rs  token_blocks.rs
lib/memory/: Cargo.toml
lib/memory/src/: device.rs  lib.rs  pinned.rs
lib/memory/src/numa/: mod.rs  worker_pool.rs
lib/mocker/: Cargo.toml
lib/mocker/src/: engine.rs  lib.rs  simulation.rs
lib/mocker/src/cache/: mod.rs  radix_cache.rs
lib/mocker/src/common/: kv_cache_trace.rs  mod.rs  perf_model.rs  protocols.rs  sequence.rs  utils.rs
lib/mocker/src/kv_manager/: mod.rs  sglang_backend.rs  vllm_backend.rs
lib/mocker/src/loadgen/: driver.rs  mod.rs  tests.rs  trace.rs  types.rs
lib/mocker/src/replay/: collector.rs  entrypoints.rs  loader.rs  mod.rs  validate.rs
lib/mocker/src/replay/offline/: README.md  core.rs  disagg.rs  events.rs  mod.rs  multi.rs  runtime_utils.rs  single.rs  state.rs
lib/mocker/src/replay/online/: demux.rs  live_runtime.rs  mod.rs  runtime.rs  state.rs  task.rs  tests.rs
lib/mocker/src/replay/router/: mod.rs  offline.rs  online.rs  shared.rs
lib/mocker/src/scheduler/: kv_event_sink.rs  mod.rs  sglang.rs  test_utils.rs  vllm.rs
lib/mocker/src/scheduler/sglang/: config.rs  core.rs  decode.rs  live.rs  mod.rs  policy.rs  prefill.rs  request.rs  tests.rs
lib/mocker/src/scheduler/vllm/: core.rs  live.rs  mod.rs  tests.rs
lib/runtime/: Cargo.toml
lib/runtime/src/: config.rs  distributed.rs  error.rs  lib.rs  logging.rs  metrics.rs  nvtx.rs  runtime.rs
lib/runtime/src/component/: endpoint.rs
lib/runtime/src/config/: environment_names.rs
lib/runtime/src/discovery/: metadata.rs
lib/runtime/src/metrics/: frontend_perf.rs  prometheus_names.rs  request_plane.rs  tokio_perf.rs  transport_metrics.rs  work_handler_perf.rs
lib/runtime/src/pipeline/: network.rs
lib/runtime/src/pipeline/network/: manager.rs  tcp.rs
lib/runtime/src/pipeline/network/codec/: two_part.rs
lib/runtime/src/pipeline/network/egress/: addressed_router.rs  nats_client.rs  push_router.rs  tcp_client.rs  unified_client.rs
lib/runtime/src/pipeline/network/ingress/: http_endpoint.rs  push_handler.rs  shared_tcp_endpoint.rs
lib/runtime/src/pipeline/network/tcp/: client.rs  server.rs
lib/runtime/src/transports/event_plane/: mod.rs
lib/velo-common/: Cargo.toml  README.md
lib/velo-common/src/: address.rs  identity.rs  lib.rs  transport.rs
lib/velo-events/: Cargo.toml  README.md
lib/velo-transports/: Cargo.toml  README.md  build.rs
lib/velo-transports/docs/: tcp.md
lib/velo-transports/proto/: velo.proto
lib/velo-transports/src/: address.rs  lib.rs  transport.rs
lib/velo-transports/src/tcp/: framing.rs  listener.rs  mod.rs  transport.rs
lib/velo-transports/src/uds/: listener.rs  mod.rs  transport.rs
lib/velo-transports/tests/: tcp_integration.rs  tcp_shutdown.rs  uds_integration.rs  uds_shutdown.rs
lib/velo-transports/tests/common/: mod.rs  scenarios.rs
recipes/: README.md
tasks/: sweep.py
tests/: README.md  conftest.py  report_pytest_markers.py
(+729 files in other folders)
