# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "kvbm-logical"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
dynamo-tokens = { workspace = true }

anyhow = { workspace = true }
async-stream = "0.3"
bytes = "1.10"
derive_builder = { workspace = true }
futures = { workspace = true }
lru = "0.16"
parking_lot = { workspace = true }
prometheus = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
xxhash-rust = { workspace = true }

[features]
testing = []

[dev-dependencies]
proptest = "1.5.0"
rstest = "0.26"
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
